infra/manifests/my/ingress/kafka_ui_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui
  namespace: vibecheck
spec:
  ingressClassName: nginx
  rules:
    - host: kafka-ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
