infra/manifests/my/ingress/minio_api_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  namespace: vibecheck
spec:
  ingressClassName: nginx
  rules:
    - host: minio.api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
